src/styles/event-form.less
/* ... */
.btn-plus {
  position: relative;
  margin-left: 1em;
  padding-left: 0.25em;
}

.btn-plus:before {
  content: "\f055";
  font-family: "Font Awesome 5 Free";
  font-size: 15px;
  color: @udb-gray;
  margin-right: 0.5em;
  text-decoration: none;
  position: absolute;
  left: -1em;
  top: 6px;
}

.event-type-choser-label {
  background-repeat: no-repeat;
  background-position: top center;
  background-size: auto 60px;
  padding-top: 75px;
  position: relative;
  text-align: center;
  width: 100%;
  z-index: 0;
  > span {
    background-color: @body-bg;
    padding: 0.2em 1em;
  }
  &:before {
    border-top: 1px solid @udb-gray;
    bottom: 12px;
    content: "";
    position: absolute;
    left: 0;
    width: 100%;
    z-index: -1;
  }
  &.event {
    background-image: url("../images/icons/icon-event.svg");
  }
  &.place {
    background-image: url("../images/icons/icon-place.svg");
  }
}
.event-type-splitter {
  display: block;
  margin-bottom: 1em;
  margin-top: 1em;
  @media (min-width: @screen-xs-min) {
    margin-top: 75px;
  }
}

.image-copyright-agreements {
  font-size: 0.85em;
}

.datepicker-days .highlight {
  background-color: @udb-gray-light;
}

.datepicker-days .omd.active:after {
  color: @udb-gray-light;
}

.datepicker-days .omd:after {
  color: #006c7a;
  content: "OMD";
  display: block;
  font-size: 11px;
  font-weight: bold;
  line-height: 18px;
  text-transform: uppercase;
}

form.contact-info,
form.booking-period {
  table {
    border: 1px solid @udb-gray-light;
  }
}

.npr {
  padding-right: 0px;
}

.npl {
  padding-left: 0px;
}

#titel .help-block {
  max-width: 450px; // corresponds to linelength of +/- 65 characters
}

.organizer-form .alert-link {
  text-decoration: underline;
}

.audience .help-block {
  font-size: small;
}

.padding-left-12-5 {
  padding-left: 12.5px;
}

.permanent-title {
  font-size: 2rem;
  font-weight: 300;
  color: @gray;
  display: block;
  line-height: 1.5;
}

.permanent-subtitle {
  font-size: 1.25rem;
  color: @gray;
  display: block;
  line-height: 1.5;
  margin-top: 5px;
}

.uib-separator {
  padding: 0 5px;
  color: @gray-darker;
}

.uib-timepicker {
  display: inline-block;
  border-top: 1px solid #ccc;
  border-bottom: 1px solid #ccc;
  height: 34px;

  input {
    margin-top: -1px;
  }
}

.opening-hours-labels {
  font-weight: 700;
}
.extra-beschrijving {
  .loader {
    border-radius: 6px;
    margin-left: 6px;
    width: 100px;
    position: relative;
    height: 1em;
    display: inline-block;
  }

  .empty {
    width: 100%;
    background-color: darken(#ededed, 5);
    position: absolute;
    top: 0;
    left: 0;
    bottom: 0;
  }

  .bar {
    background-color: #5cb85c;
    position: absolute;
    top: 0;
    left: 0;
    bottom: 0;
  }

  .description-info {
    font-size: small;
  }

  .description-tips {
    p {
      margin: 0;
    }
  }
}

.form-age-range-button {
  margin-bottom: 0.2em;
  color: #333333;

  span {
    font-size: small;
    color: grey;
    font-weight: 300;
  }

  &.active {
    background-color: transparent;
    box-shadow: none;
  }

  &.active:focus {
    outline: 0;
  }
}

#form-age {
  .form-group {
    margin-bottom: 0.5em;
  }

  .form-group:not(:last-child) {
    margin-right: 1rem;
  }
}

